# anti-silo

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: macos-release.yml  windows-release.yml
anti_silo/: __init__.py  brain.py  branding.py  cli.py  config.py  consultant.py  contradiction.py  contradiction_rules.py  eligible.py  evidence_queue.py  grounding_permit.py  gui.py  hashing.py  index.py  ingest.py  ingest_extract.py  model.py  preflight.py  preflight_artifacts.py  projects.py  promotion.py  pulse.py  quick_scan.py  repair.py  report_labels.py  scanner.py  simulate.py  snapshot.py  spine.py  telemetry.py  triangulation.py  watch.py
anti_silo/gui/: __init__.py  assets.py  aux_routes.py  client_report.py  handler.py  labels.py  pickers.py  report.py  server.py
anti_silo/gui/static/: app.brain.js  app.core.js  app.init.js  app.js  app.net.js  app.preflight.js  app.projects.js  app.render.js  (+3 more)
api/: scan.py
contracts/: default_config.json
docs/: ADVERSARIAL_REVIEW_2026-07-16.md  CONSULTANT_PILOT.md  DISTRIBUTION.md  LAUNCH_READINESS.md  SECOND_BRAIN.md
docs/design/: UI_DESIGN.md  prototype.html
packaging/: Anti-Silo.iss  INSTALL-WINDOWS.txt  README.md  anti_silo_gui.spec  run_gui.py  windows_context_menu.ps1
public/: app.js  index.html  privacy.html  styles.css  terms.html
scripts/: serve_web_beta.py
tests/: test_branding.py  test_config.py  test_consultant.py  test_engine.py  test_file_length.py  test_grounding_permit.py  test_preflight.py  test_simulate.py  test_web_api.py  test_web_ui.py
(+5 files in other folders)
