[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anti-silo"
version = "0.1.0"
description = "Portable trust-surface and triangulation engine for local knowledge graphs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
desktop = ["pyinstaller>=6"]

[project.scripts]
anti-silo = "anti_silo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
